# ElecardInterview

./: CMakeLists.txt  ImageBMP.cpp  ImageBMP.h  README.md  Utils.h  VideoYUV.cpp  VideoYUV.h  main.cpp
.github/workflows/: cmake-single-platform.yml
